# fl-egshehh8

./: .gitignore  README.md  WINDOWS_PLUGIN_README.md  analysis_options.yaml  auto.py  folder_structure.txt  fully.py  pubspec.yaml  pusher.py  setup.bat  setup.sh
.github/workflows/: build-windows.yml
assets/config/: oryvexvpn-config.json
docs/: index.html
lib/: main.dart
lib/services/: vpn_service.dart
lib/views/: config_view.dart  dashboard_view.dart  diagnostics_view.dart  home_page.dart  logs_view.dart  settings_view.dart
lib/widgets/: connection_button.dart  sidebar.dart  stats_card.dart
windows/plugins/vpn_plugin/: CMakeLists.txt  vpn_plugin.cpp
